# ChemiLog

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  package.json  pyproject.toml
ai-service/: Dockerfile  pyproject.toml
ai-service/app/: main.py
ai-service/app/api/: routes.py
ai-service/app/core/: config.py  security.py
ai-service/app/db/: __init__.py  base.py  enums.py  models.py
ai-service/app/schemas/: __init__.py  ai.py  domain.py
ai-service/app/services/: __init__.py  internal_log_client.py  mentoring_pipeline.py  openai_service.py  persona_router.py  quality_guard.py  rag_service.py  semantic_cache.py
backend/main-service/: Dockerfile  pom.xml
docs/: SWAGGER_GUIDE.md  fastapi-openapi.json  spring-openapi.json  submission-guide.md  swagger.md
frontend/admin-web/: index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/admin-web/src/: App.vue  main.js  style.css
frontend/admin-web/src/api/: client.js
frontend/admin-web/src/pages/: AdminAdditivesPage.vue  AdminDashboardPage.vue  AdminFoodsPage.vue  AdminLoginPage.vue  AdminLogsPage.vue  AdminUsersPage.vue
frontend/admin-web/src/router/: index.js
frontend/admin-web/src/stores/: adminAuthStore.js
frontend/customer-web/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.cjs  vite.config.js
frontend/customer-web/src/: App.vue  main.js  style.css
frontend/customer-web/src/api/: client.js
frontend/customer-web/src/components/: AiMentorWidget.vue  OnboardingWizard.vue
(+108 files in other folders)
