[project]
name = "chemilog-ai-service"
version = "0.1.0"
description = "ChemiLog FastAPI AI service"
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi==0.115.6",
  "httpx==0.28.1",
  "langchain==0.3.18",
  "langchain-openai==0.3.8",
  "openai==1.66.2",
  "pydantic-settings==2.8.1",
  "pymilvus==2.5.4",
  "python-multipart==0.0.20",
  "redis==5.2.1",
  "sqlalchemy==2.0.38",
  "setuptools==75.8.2",
  "sse-starlette==2.2.1",
  "uvicorn[standard]==0.34.0"
]

[tool.uv]
package = false
